[package]
name = "tcrs"
version = "0.1.0"
authors = ["Jamu"]
edition = "2018"

[dependencies]
lazy_static = "1.4"
fancy-regex = "0.6"
rusttype = "0.9"
image = "0.23"
rand = "0.8"
hex = "0.4"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["bundled", "static-link"]